# risk-toolkit

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  justfile  mkdocs.yml  pyproject.toml
.agents/: README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
containers/: README.md
docs/: concepts.md  extending.md  index.md
docs/api/: core.md  domain.md  index.md  market-data.md  pricing.md
docs/examples/: 01_forward_pricer.html  01_forward_pricer.py  01_forward_pricer.qmd  01_price_a_forward.md  01_price_a_forward.py  01_price_a_swap.py  01_soja_pricer.html  01_soja_pricer.py  02_energy_forward.md  02_energy_forward.py  02_forward_positions.html  02_forward_positions.py  02_soja_positions.html  02_soja_positions.py  02_vanilla_option.qmd  03_autodiff_greeks.html  03_autodiff_greeks.qmd  03_inspect_a_formula.md  03_inspect_a_formula.py  03_usdbrl_df_fixing.html  03_usdbrl_df_fixing.py  04_scenario_var.html  04_scenario_var.qmd  04_shock_scenario.md  04_shock_scenario.py  04_vanilla_option.html  04_vanilla_option.py  05_option_pnl_explain.html  05_option_pnl_explain.py  05_quantlib_benchmark.html  05_quantlib_benchmark.qmd  05_soja_forward.html  05_soja_forward.py  06_equity_book.qmd  06_position_view.html  06_position_view.py  07_usdbrl_book_valuation.py  08_distributed_plan.py  09_viz_report.py  10_live_forward.py  (+8 more)
docs/examples/custom_instrument/: conventions.py  graph.py  index.md  pricer.py
examples/: 01_price_a_swap.py  02_energy_forward.py  03_price_an_option.py  04_shock_scenario.py  05_energy_forward_dsl.py  README.md  position_layer.py
examples/custom_instrument/: README.md  __init__.py  graph.py  pricer.py  run.py
examples/notebooks/: energy_forward.py  usdbrl_book_valuation.py
integration/: __init__.py  realistic_data.py  test_pricing_performance.py
meson_pi/: energy.py  graph.py  market.py  options.py  pipeline.py  portfolio.py
meson_pi/swap/: pricing_graph.py  schemas.py  transforms.py
nix/: check.nix  default.nix  nix.nix  shell.nix
nix/modules/: default.nix  fmt.nix  pkgs.nix  pre-commit.nix
notebooks/: README.md  REFACTORING_NOTES.md  build_debugging_notebook.py  debugging_capabilities.ipynb
plugins/schenberg_distributed/: README.md  pyproject.toml
plugins/schenberg_distributed/schenberg_distributed/: __init__.py  backends.py  context.py  executors.py  plan.py
plugins/schenberg_distributed/tests/: test_dask_executor.py  test_local_executor.py  test_plan.py
plugins/schenberg_live/: README.md  pyproject.toml
plugins/schenberg_live/schenberg_live/: __init__.py  cache.py  engine.py  events.py  index.py
plugins/schenberg_live/tests/: test_live.py
plugins/schenberg_viz/: README.md  pyproject.toml
plugins/schenberg_viz/schenberg_viz/: __init__.py  debug.py  html.py  latex.py  markdown.py  mermaid.py  png.py
plugins/schenberg_viz/tests/: test_viz.py
schenberg/: __init__.py  contracts.py
schenberg/core/: __init__.py  columns.py  diagnostics.py  expr.py  fold.py  graph.py  market.py  pipeline.py  router.py  structure.py
schenberg/domain/: base.py  enums.py  rules.py  schemas.py
schenberg/domain/schemas/: __init__.py  forward.py  market_data.py  option.py  position.py  structure.py  swap.py
schenberg/market_data/: __init__.py  date_rules.py  fixings.py  forwards.py  fx.py  interpolated.py  path.py  requirements.py  roles.py  semantic.py  shocks.py  snapshot.py  sources.py  specs.py  volatility.py
schenberg/market_data/calendar/: ANBIMA.cal  __init__.py  anbima.py  business_days.py  conventions.py
schenberg/market_data/curves/: __init__.py  di.py
schenberg/market_data/objects/: __init__.py  compounding.py  conventions.py  curves.py  errors.py  volatility.py
schenberg/math/: black_scholes.py  discounting.py  expressions.py  interpolation.py  statistics.py
schenberg/position/: __init__.py  book.py  catalog.py  functions.py  measures.py  pipelines.py  view.py  views.py
schenberg/pricing/: __init__.py  api.py  discounting.py  market.py  out.md  portfolio.py  structured.py
schenberg/pricing/greeks/: __init__.py  analytic.py  autodiff.py  model.py  numeric.py
schenberg/pricing/instruments/: __init__.py  options.py
schenberg/risk/: __init__.py  dv01.py  scenario.py
schenberg/risk/greeks/: __init__.py  autodiff.py  graph.py  numeric.py
schenberg/structure/: __init__.py
tests/: conftest.py  test_graph.py  test_lazy_boundaries.py  test_pricing.py  test_pricing_dsl.py  test_quant_architecture.py
tests/core/: test_api_refactor.py  test_columns.py  test_composition.py  test_diagnostics.py  test_expr.py  test_fold.py  test_formula.py  test_formula_contract_resolution.py  test_formula_decorator.py  test_graph_missing_inputs.py  test_market.py  test_normal.py  test_router.py  test_router_contract.py  test_structure.py  test_term_dsl.py  test_workflow.py
tests/domain/: test_contract_rules.py
tests/integration/: __init__.py  option_data.py  option_pricer.py  realistic_data.py  test_architecture_regressions.py  test_forward_decorator_pricing.py  test_full_pipeline.py  test_option_pipeline.py  test_option_pnl_explain.py  test_position_examples.py  test_pricing_performance.py  test_removed_pricing_api.py  test_usdbrl_fixing.py  test_vanilla_option.py
tests/market_data/: test_anbima_calendar.py  test_business_days.py  test_date_rules.py  test_interpolated_boundary.py  test_objects.py  test_roles.py  test_semantic.py  test_shocks.py  test_source_uniqueness.py
tests/math/: test_interpolation.py  test_statistics.py
tests/plugins/schenberg_distributed/: test_context.py
tests/position/: test_currency_conversion_boundary.py  test_functions.py  test_pipelines.py  test_view.py
tests/pricing/: test_public_api.py  test_structured.py
tests/pricing/forward/: test_energy.py  test_energy_fixing.py  test_forward_energy.py  test_forward_generic.py  test_forward_router.py
tests/pricing/option/: conftest.py  test_greeks.py  test_option_pricing.py
tests/pricing/swap/: test_swap_fx.py  (+3 more)
tests/risk/: test_dv01.py  test_greeks.py
tests/structure/: test_structure.py
(+47 files in other folders)
