[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "schenberg"
version = "0.1.0"
description = "Graph-based risk and pricing toolkit for forwards, swaps, portfolios, PnL, and risk."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Schenberg contributors" }]
dependencies = [
  "pandera[polars]>=0.25",
  "polars>=1.30",
  "pandas>=2.2",
  "rustworkx>=0.16",
  "numpy>=2.0",
  "autograd>=1.8.0",
  "jax[cpu]>=0.10.1",
]

[tool.uv.workspace]
members = ["plugins/*"]

[tool.uv.sources]
schenberg-distributed = { workspace = true }
schenberg-viz = { workspace = true }
schenberg-live = { workspace = true }

[dependency-groups]
dev = [
  "pytest>=8.4",
  "ruff>=0.12",
  "ty>=0.0.1a16",
  "poethepoet>=0.36",
  "schenberg-distributed",
  "schenberg-viz",
  "schenberg-live",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.29",
  "marimo>=0.9",
  "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4",
  "ruff>=0.12",
  "ty>=0.0.1a16",
  "poethepoet>=0.36",
  "marimo>=0.9",
]
jax = [
    "jax[cpu]>=0.10.1",
]

[tool.hatch.build.targets.wheel]
packages = ["schenberg"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests", "plugins/*/tests"]
markers = [
  "performance: throughput guardrails (run with `pytest tests/integration`)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["schenberg", "plugins", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
# expr.py is the IR interpreter: match-based dispatchers legitimately have many
# returns/branches, precedence levels are bare ints, and the JAX import is an
# intentionally guarded optional dependency.
"schenberg/core/expr.py" = ["PLR0911", "PLR0912", "PLR2004", "PLC0415"]
# tests assert against literal expected values.
"tests/**/*.py" = ["PLR2004"]
"plugins/*/tests/**/*.py" = ["PLR2004"]
# marimo notebooks are cell-DAGs of identically-named ``def _`` functions whose
# last expression is the cell's display value; that idiom is the notebook format,
# not a smell.
"docs/examples/01_*.py" = ["F811", "B018", "PLR1711", "PLR0913", "PLR2004", "PLC0415", "I001", "E402"]
"docs/examples/02_*.py" = ["F811", "B018", "PLR1711", "PLR0913", "PLR2004", "PLC0415", "I001", "E402"]
"docs/examples/04_*.py" = ["F811", "B018", "PLR1711", "PLR0913", "PLR2004", "PLC0415", "I001", "E402"]
"docs/examples/05_*.py" = ["F811", "B018", "PLR1711", "PLR0913", "PLR2004", "PLC0415", "I001", "E402"]
"docs/examples/03_*.py" = ["F811", "B018", "PLR1711", "PLR0913", "PLR2004", "PLC0415", "I001", "E402"]
"docs/examples/08_*.py" = ["F811", "B018", "PLR1711", "PLR0913", "PLR2004", "PLC0415", "I001", "E402"]
"docs/examples/09_*.py" = ["F811", "B018", "PLR1711", "PLR0913", "PLR2004", "PLC0415", "I001", "E402"]
"docs/examples/10_*.py" = ["F811", "B018", "PLR1711", "PLR0913", "PLR2004", "PLC0415", "I001", "E402"]
"docs/examples/11_*.py" = ["F811", "B018", "PLR1711", "PLR0913", "PLR2004", "PLC0415", "I001", "E402"]
"docs/examples/12_*.py" = ["F811", "B018", "PLR1711", "PLR0913", "PLR2004", "PLC0415", "I001", "E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]
environment = { python-version = "3.12" }

[tool.poe.tasks]
test = "pytest"
lint = "ruff check ."
format = "ruff format ."
typecheck = "ty check schenberg/core/graph.py"
check = ["lint", "typecheck", "test"]
integration = "pytest tests/integration -m 'not performance'"
docs-build = "mkdocs build"
docs-serve = "mkdocs serve --dev-addr 0.0.0.0:8000"
examples-forward-html = "marimo export html docs/examples/01_forward_pricer.py -o docs/examples/01_forward_pricer.html"
examples-positions-html = "marimo export html docs/examples/02_forward_positions.py -o docs/examples/02_forward_positions.html"
examples-usdbrl-html = "marimo export html docs/examples/03_usdbrl_df_fixing.py -o docs/examples/03_usdbrl_df_fixing.html"
examples-vanilla-option-html = "marimo export html docs/examples/04_vanilla_option.py -o docs/examples/04_vanilla_option.html"
examples-option-pnl-html = "marimo export html docs/examples/05_option_pnl_explain.py -o docs/examples/05_option_pnl_explain.html"
examples-structure-html = "marimo export html docs/examples/11_buy_sell_structure.py -o docs/examples/11_buy_sell_structure.html"
examples-di-risk-html = "marimo export html docs/examples/12_di_futures_risk.py -o docs/examples/12_di_futures_risk.html"
examples-html = ["examples-forward-html", "examples-positions-html", "examples-usdbrl-html", "examples-vanilla-option-html", "examples-option-pnl-html", "examples-structure-html", "examples-di-risk-html"]
