[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "schenberg"
version = "0.1.0"
description = "Graph-based risk and pricing toolkit for forwards, swaps, portfolios, PnL, and risk."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Schenberg contributors" }]
dependencies = [
  "pandera[polars]>=0.25",
  "polars>=1.30",
  "pandas>=2.2",
  "rustworkx>=0.16",
  "numpy>=2.0",
  "autograd>=1.8.0",
  "jax[cpu]>=0.10.1",
]

[tool.uv.workspace]
members = ["plugins/*"]

[tool.uv.sources]
schenberg-distributed = { workspace = true }
schenberg-viz = { workspace = true }
schenberg-live = { workspace = true }

[dependency-groups]
dev = [
  "pytest>=8.4",
  "ruff>=0.12",
  "ty>=0.0.1a16",
  "poethepoet>=0.36",
  "schenberg-distributed",
  "schenberg-viz",
  "schenberg-live",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.29",
  "marimo>=0.9",
  "matplotlib>=3.9",
  "ipykernel>=7.2.0",
  "nbclient>=0.11.0",
  "nbformat>=5.10.4",
  "jupyter-client>=8.9.0",
  "quantlib>=1.42.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4",
  "ruff>=0.12",
  "ty>=0.0.1a16",
  "poethepoet>=0.36",
  "marimo>=0.9",
]
jax = [
    "jax[cpu]>=0.10.1",
]

[tool.hatch.build.targets.wheel]
packages = ["schenberg"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests", "plugins/*/tests"]
markers = [
  "performance: throughput guardrails (run with `pytest tests/integration`)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["schenberg", "plugins", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
# expr.py is the IR interpreter: match-based dispatchers legitimately have many
# returns/branches, precedence levels are bare ints, and the JAX import is an
# intentionally guarded optional dependency.
"schenberg/core/expr.py" = ["PLR0911", "PLR0912", "PLR2004", "PLC0415"]
# tests assert against literal expected values.
"tests/**/*.py" = ["PLR2004"]
"plugins/*/tests/**/*.py" = ["PLR2004"]
# the shared option pricer defines many small headless formula functions whose
# parameters legitimately shadow earlier terms / take several market inputs.
"tests/integration/option_pricer.py" = ["PLR0913"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]
environment = { python-version = "3.12" }

[tool.poe.tasks]
test = "pytest"
lint = "ruff check ."
format = "ruff format ."
typecheck = "ty check schenberg"
check = ["lint", "typecheck", "test"]
integration = "pytest tests/integration -m 'not performance'"
docs-build = "mkdocs build"
docs-serve = "mkdocs serve --dev-addr 0.0.0.0:8000"
# Render the Quarto example notebooks to standalone HTML. QUARTO_PYTHON points
# Quarto's jupyter engine at this project's uv environment.
examples-html = { cmd = "quarto render docs/examples --to html", env = { QUARTO_PYTHON = "${POE_ROOT}/.venv/bin/python3" } }
examples-preview = { cmd = "quarto preview docs/examples", env = { QUARTO_PYTHON = "${POE_ROOT}/.venv/bin/python3" } }
