[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "schenberg-live"
version = "0.1.0"
description = "In-memory event-driven valuation engine for Schenberg valuation plans."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Schenberg contributors" }]
dependencies = [
  "polars>=1.30",
  "schenberg",
  "schenberg-distributed",
]

[tool.uv.sources]
schenberg = { workspace = true }
schenberg-distributed = { workspace = true }

[dependency-groups]
dev = [
  "pytest>=8.4",
  "ruff>=0.12",
  "ty>=0.0.1a16",
]

[tool.hatch.build.targets.wheel]
packages = ["schenberg_live"]
